# replayt-mcp-bridge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.aider.tags.cache.v4/: cache.db-shm  cache.db-wal
.ci-venv/: pyvenv.cfg
.ci-venv/Scripts/: activate  activate.bat
.cursor/skills/: README.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bridge-bug.yml  integration-host.yml
.github/workflows/: ci.yml
.phase7b-venv/: pyvenv.cfg
.phase7b-venv/Scripts/: activate  activate.bat
.venv-align/: pyvenv.cfg
.venv-align-check/: pyvenv.cfg
.venv-align-check/Scripts/: activate  activate.bat
.venv-align/Scripts/: activate  activate.bat
.venv-ci-check/: pyvenv.cfg
.venv-ci-check/Scripts/: activate  activate.bat
.venv-p3/: pyvenv.cfg
.venv-p3/Scripts/: activate  activate.bat
.venv-phase3/: pyvenv.cfg
.venv-phase3/Scripts/: activate  activate.bat
docs/: ARCHITECTURE.md  DEPENDENCY_AUDIT.md  DESIGN_PRINCIPLES.md  MCP_HOST_CONFIG.md  MCP_TOOLS.md  MISSION.md  REPLAYT_0_5_COMPATIBILITY_SPIKE.md  REPLAYT_ECOSYSTEM_IDEA.md  SECURITY.md
docs/reference-documentation/: README.md
docs/reference-documentation/snapshots/replayt-0.4.25/: ATTRIBUTION.md  LICENSE  README.md
scripts/: refresh_replayt_reference_docs.py  run_ci_checks.py
src/replayt_mcp_bridge/: __init__.py  __main__.py  health_probe.py  mcp_instance.py  observability.py  persistence_support.py  server.py  tools_bounds.py  tools_common.py  tools_health.py  tools_persistence.py  tools_workflow.py  utils.py
tests/: test_bridge_replayt_boundary.py  test_cli_health.py  test_diagnostic_echo_gate.py  test_mcp_host_config_docs.py  test_mcp_server_stdio.py  test_mcp_stdio_session_smoke.py  test_mcp_tools.py  test_mission_docs.py  test_observability.py  test_reference_documentation.py  test_replayt_0_5_spike_docs.py  test_replayt_dependency.py  test_run_ci_checks.py  test_security_docs.py  test_version_contract_docs.py
