[project]
name = "replayt-mcp-bridge"
version = "0.1.0"
description = "MCP tool bridge for replayt workflow steps: Python project using replayt; see docs for scope."
requires-python = ">=3.11"
dependencies = [
  "replayt>=0.4.25,<0.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
