[project]
name = "replayt-mcp-bridge"
version = "0.1.0"
description = "MCP tool bridge for replayt workflow steps: Python project using replayt; see docs for scope."
requires-python = ">=3.11"
dependencies = [
  "replayt>=0.4.25,<0.5",
  "mcp>=1.0,<2",
  # So `pip install -e .` (e.g. Mission Control workflow step 4) can run `pytest` without requiring `.[dev]`.
  "pytest>=8.0",
]

[project.scripts]
replayt-mcp-bridge = "replayt_mcp_bridge.__main__:main"

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
